# best-hn

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md  blog-figures.ipynb  explore.ipynb  identify-best-comments.ipynb  inference.py  install_deps.sh  merge-model.ipynb  mount-remote.sh  prepare-dataset.ipynb  prepare_env.sh  pyproject.toml  rate-random-comments.ipynb  rate_top_comments.py  setup_remote.sh  stories-analysis.ipynb  stories-inference.ipynb  stories-test-inference.ipynb  stories_train_model_v1.py  stories_train_model_v10.py  stories_train_model_v11.py  stories_train_model_v12.py  stories_train_model_v2.py  stories_train_model_v3.py  stories_train_model_v4.py  stories_train_model_v5.py  stories_train_model_v6.py  stories_train_model_v7.py  stories_train_model_v8.py  stories_train_model_v9.py  test-inference.ipynb  test_reward_model_separate_dataset.py  tmp_code_from_ba.py  train_reward_model.py  train_reward_model_1b_test.py  train_reward_model_3b_fft.py  train_reward_model_8b_fft.py  (+5 more)
best_hn/scraped_stories/: prepare_data.ipynb
cache/: cache.py  test_cache.py
scraped-stories/: prepare-data.ipynb
scraped_stories/: cache.py  prepare_data.ipynb  prepared_dataset.py  run_skypilot.py
scraped_stories/generate_titles/: benchmark_models.py  benchmark_results.json  inspect_generated_titles.py  utils.py
scraped_stories/generate_titles/grpo/: debug.yaml  model1.yaml  model2.yaml  model3.yaml  model4.yaml  train_grpo.py  train_grpo_old_example.py
scraped_stories/generate_titles/rm/: inference.py  model2.py  model4.yaml  model7.yaml  run_predictions_model1.py  train_reasoning_rm.py  utils.py
scraped_stories/generate_titles/rm/serve_rm/: serve_rm.py  serve_rm.yaml
scraped_stories/rm/: analyze.ipynb  create_image.py  modal_app.py  model1.py  model2.py  model2.yaml  model3.py  model3.yaml  model5.yaml  model6.yaml  test.py  train_rm.py  training_helpers.py  update_image.py  utils.py
