[project]
name = "best-hn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai==1.41.1",
    "pydantic==2.6.2",
    "fastapi==0.110.0",
    "pandas==2.2.1",
    "s3fs==2024.5.0",
    "wandb==0.17.5",
    "mlflow==2.15.1",
    "openpipe==4.25.0",
    "backoff>=2.2.1",
    "octoai>=1.9.0",
    "python-dotenv>=1.0.1",
    "transformers>=4.45.1",
    "trl>=0.11.1",
    "peft>=0.13.0",
    "asyncpg>=0.29.0",
    "huggingface-hub==0.25.1",
    "hf-transfer==0.1.8",
    "bitsandbytes==0.44.1",
]
