[project]
name = "best-hn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # "bitsandbytes>=0.44.1",
    "aioboto3>=13.2.0",
    # "bitsandbytes>=0.44.1",
    "datasets>=3.0.1",
    "dicttoxml>=1.7.16",
    "docker>=7.1.0",
    "google-api-python-client>=2.152.0",
    # "flash-attn==2.6.3",
    "hf-transfer>=0.1.8",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    # "liger-kernel>=0.3.1",
    "matplotlib>=3.9.2",
    "modal>=0.65.48",
    "moto[s3]>=5.0.20",
    "numpy>=1.26.4",
    "openai>=1.65.3",
    "panza",
    "peft>=0.13.2",
    "plotly>=5.24.1",
    "polars>=1.9.0",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "s3fs>=2024.6.1",
    "schedulefree>=1.2.7",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "skypilot[runpod]>=0.8.0",
    "streamlit-aggrid>=1.1.1",
    "streamlit>=1.43.0",
    # "sglang[all]>=0.3.3.post1",
    "torch==2.4.0",
    "tqdm>=4.66.5",
    "transformers>=4.45.2",
    "trl>=0.11.4",
    "wandb>=0.18.3",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers" }
panza = { git = "https://github.com/corbt/panza.git" }
